# cuSpinTripSuperFerro

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  plotting.py
source/: buffers.hpp  device_params.cu  device_params.cuh  kernel.cu  kernels.hpp  kernels_common.cuh  main_modular.cpp  output.hpp  params.hpp  renderer_gl.hpp  simulation.hpp
